--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,11 @@ FIREBASE_DATABASE_URL=databaseURL: "https://sih-2025-2-default-rtdb.firebaseio.c
 JWT_SECRET="Gyk+fMczFDsR7ghcYJoebKiLDYCuj68rjVX1Pk02ItI="
 
 
+SMTP_USER="a34705322@gmail.com"
+SMTP_PASS="xxek kxmw yciu zyyj"
+
+
+# Twilio Config (SMS)
+TWILIO_ACCOUNT_SID="AC24a8febc566956cbf2f657019cfa7fdc"
+TWILIO_AUTH_TOKEN="3b14aecccdcbde707c6e4e1409be2425" 
+TWILIO_PHONE_NUMBER="+18575676320"
