--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
+# Node modules
 node_modules
+frontend/node_modules
+server/node_modules
+
+# Build outputs
+dist
+build
+
+# Environment files
+.env
+server/.env
+frontend/.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# System files
+.DS_Store
+Thumbs.db
+
+# IDE specific
+.vscode/
+.idea/
